--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,10 +1,12 @@
 name: Running Java Interview programs
 
-on: [push, pull_request]
-  branches: ["main"]
+on:
+  push:
+    branches: ["main"]
 
 jobs:
   test:
+    runs-on: macos-latest
     steps:
       - name: SETUP JAVA 18
         uses: actions/setup-java@v3
