--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,4 +14,4 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - run: |
-          java FilterNCollect.java
+          java ./src/main/java/com/javaprograms/FilterNCollect.java
