--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,6 +8,8 @@ jobs:
   test:
     runs-on: macos-latest
     steps:
+      - name: CHECK OUT REPO
+        used: actions/checkout@v2
       - name: SETUP JAVA 18
         uses: actions/setup-java@v3
         with:
